--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "angular-ui-router": "~0.2.15",
-    "angular": "~1.4.0"
+    "angular": "~1.4.0",
+    "normalize.css": "~3.0.3"
   }
 }
