--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "gulp-concat": "^2.5.2",
     "gulp-inject": "^1.2.0",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-css": "^1.1.6",
     "gulp-nodemon": "^2.0.3",
+    "gulp-rev": "^4.0.0",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-usemin": "^0.3.11",
     "gulp-util": "^3.0.5",
     "gulp-watch": "^4.2.4",
     "gulp-webpack-build": "^0.11.1",
