--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "application-scaffold",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node ./server/bin/www"
@@ -14,6 +14,8 @@
     "serve-favicon": "~2.2.1"
   },
   "devDependencies": {
+    "angular-ui-router": "~0.2.15",
+    "angular": "~1.4.0",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.9.3",
     "del": "^1.2.0",
