--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "serve-favicon": "~2.2.1"
   },
   "devDependencies": {
-    "angular-ui-router": "~0.2.15",
     "angular": "~1.4.0",
+    "angular-ui-router": "~0.2.15",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.9.3",
     "del": "^1.2.0",
@@ -26,7 +26,9 @@
     "gulp-inject": "^1.2.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.1.6",
-    "gulp-nodemon": "^2.0.3",
+    "nodemon": "1.3.7",
+    "gulp-nodemon": "^2.0.2",
+    "gulp-order": "^1.1.1",
     "gulp-rev": "^4.0.0",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
